Added Work Experience and Research sections

--- a/index.html
+++ b/index.html
@@ -301,6 +301,62 @@
             </ul>
         </section>
 
+        <!-- Graduate Coursework & Research Section -->
+        <section class="section">
+            <h2>Graduate Coursework & Research Experience</h2>
+
+            <div class="projects-grid">
+
+                <div class="project-card">
+                    <h3>Undergraduate Researcher</h3>
+                    <p>
+                        <strong>Institute for Information Sciences (I2S), University of Kansas</strong><br>
+                        Jan 2023 to May 2025
+                    </p>
+
+                    <p>
+                        Designed and developed an interactive <strong>MRI viewer application</strong> using Dash and Plotly
+                        to visualize, navigate, and analyze 3D MRI volumes, including region-of-interest overlays
+                        to support biomedical imaging tasks.
+                    </p>
+
+                    <p>
+                        Applied deep learning techniques to biomedical data, including <strong>
+                            semantic segmentation of
+                            heart MRIs using U-Net
+                        </strong>, extracting features for downstream analysis and computational
+                        modeling.
+                    </p>
+
+                    <p>
+                        Presented research papers, contributed to discussions, and participated in professional
+                        development activities during weekly I2S research group meetings.
+                    </p>
+                </div>
+
+                <div class="project-card">
+                    <h3>Advanced Coursework: MATH 796</h3>
+                    <p><strong>Optimization & Machine Learning (Graduate Course)</strong></p>
+
+                    <p>
+                        Exploring robust machine learning and optimization methods with emphasis on optimization
+                        dynamics, stability, generalization, and theory-to-practice alignment.
+                    </p>
+                    <p>
+                        Working on <strong>CardioSegNet — Phase 2</strong> as the final course project, focusing on
+                        advanced optimization techniques, architectural improvements, and model robustness for
+                        biomedical image segmentation.
+                    </p>
+                    <p>
+                        Conducted mathematical analysis of optimization algorithms, including gradient methods,
+                        adaptive learning rules, convergence guarantees, and practical stability considerations.
+                    </p>
+                </div>
+
+            </div>
+        </section>
+
+
         <!-- Research Mentors Section -->
         <section class="section">
             <h2>Research Mentors</h2>
@@ -334,6 +390,65 @@
             </div>
         </section>
 
+        <!-- Work Experience Section -->
+        <section class="section">
+            <h2>Work Experience</h2>
+
+            <div class="projects-grid">
+
+                <div class="project-card">
+                    <h3>Software Engineering Intern</h3>
+                    <p><strong>MP Software LLC</strong> — Jun 2025 to Aug 2025</p>
+                    <p>
+                        Contributed to <strong>SyncroAI</strong>, the company’s long-term AI initiative, by drafting a
+                        multi-phase strategic roadmap and identifying integration opportunities across pricing,
+                        inventory, and reporting systems. Actively collaborated with leadership to align technical
+                        priorities with business objectives.
+                    </p>
+                    <p>
+                        Led the development of SyncroStore’s first AI-powered analytics feature—a
+                        <strong>customer segmentation system</strong> using K-Means clustering.
+                    </p>
+                    <p>
+                        Worked on full-stack ASP.NET Web Forms development, resolving customer-reported bugs and
+                        designing usability-focused features to improve operational efficiency.
+                    </p>
+                    <p>
+                        Managed database integration tasks including writing stored procedures, optimizing SQL
+                        queries, and updating schemas.
+                    </p>
+                    <p>
+                        Drafted weekly technical blog posts that translated engineering progress into accessible
+                        content for non-technical audiences, covering AI use cases, SyncroStore feature highlights,
+                        and trends in retail technology.
+                    </p>
+                </div>
+
+                <div class="project-card">
+                    <h3>Desk Assistant / Night Desk Assistant</h3>
+                    <p><strong>KU Student Housing</strong> — Jan 2023 to May 2025</p>
+                    <p>
+                        Maintained clear and professional communication with desk assistants and resident assistants,
+                        fostering collaboration and reliability within the team.
+                    </p>
+                    <p>
+                        Demonstrated sound judgment and adaptability during night shifts by effectively managing
+                        unexpected situations—including student emergencies, lockouts, and policy violations.
+                    </p>
+                    <p>
+                        Assisted with move-in and move-out operations, ensuring a smooth process for residents
+                        and their families.
+                    </p>
+                    <p>
+                        Regularly communicated updates to complex directors and RAs, helping support student
+                        safety and well-being across residential communities.
+                    </p>
+                </div>
+
+            </div>
+        </section>
+
+
         <!-- Achievements Section -->
         <section class="section">
             <h2>Achievements</h2>
@@ -342,39 +457,39 @@
 
                 <div class="project-card">
 
-                <div class="project-card">
-                    <h3>UPE Honors Society</h3>
-                    <p>
-                        Member of <strong>Upsilon Pi Epsilon (UPE)</strong>, the international honor society for
-                        computing and information disciplines, recognizing academic excellence in computer science.
-                    </p>
-                </div>
+                    <div class="project-card">
+                        <h3>UPE Honors Society</h3>
+                        <p>
+                            Member of <strong>Upsilon Pi Epsilon (UPE)</strong>, the international honor society for
+                            computing and information disciplines, recognizing academic excellence in computer science.
+                        </p>
+                    </div>
 
-                <div class="project-card">
-                    <h3>Black Babcock Scholarship</h3>
-                    <p>
-                        Awarded the competitive <strong>Black Babcock Scholarship</strong> ($300) for academic
-                        excellence and strong performance in mathematics and applied computing.
-                    </p>
-                </div>
+                    <div class="project-card">
+                        <h3>Black Babcock Scholarship</h3>
+                        <p>
+                            Awarded the competitive <strong>Black Babcock Scholarship</strong> ($300) for academic
+                            excellence and strong performance in mathematics and applied computing.
+                        </p>
+                    </div>
 
-                <div class="project-card">
-                    <h3>May Landis Mathematics Scholarship</h3>
-                    <p>
-                        Recipient of the <strong>May Landis Math Scholarship</strong>, recognizing high achievement
-                        and potential in advanced undergraduate mathematics.
-                    </p>
-                </div>
+                    <div class="project-card">
+                        <h3>May Landis Mathematics Scholarship</h3>
+                        <p>
+                            Recipient of the <strong>May Landis Math Scholarship</strong>, recognizing high achievement
+                            and potential in advanced undergraduate mathematics.
+                        </p>
+                    </div>
 
-                <div class="project-card">
-                    <h3>Dean’s Honor Roll</h3>
-                    <p>
-                        Recognized multiple times on the <strong>Dean’s Honor Roll</strong> for both the
-                        School of Engineering and the College of Liberal Arts & Sciences (CLAS),
-                        awarded for outstanding academic performance.
-                    </p>
+                    <div class="project-card">
+                        <h3>Dean’s Honor Roll</h3>
+                        <p>
+                            Recognized multiple times on the <strong>Dean’s Honor Roll</strong> for both the
+                            School of Engineering and the College of Liberal Arts & Sciences (CLAS),
+                            awarded for outstanding academic performance.
+                        </p>
+                    </div>
                 </div>
-            </div>
         </section>
 
         <!-- Contact -->
