Added more to work experience

--- a/index.html
+++ b/index.html
@@ -157,6 +157,20 @@
 
         </section>
 
+        <!-- Research Agenda -->
+        <section class="section">
+            <h2>Research Agenda</h2>
+            <p>
+                My current and future research focuses on:
+            </p>
+            <ul>
+                <li>Optimization-aware tools for understanding neural network training dynamics</li>
+                <li>AI and AR systems that enhance physical therapy through motion analysis and feedback</li>
+                <li>Finite element modeling of biological tissues, particularly the human knee joint</li>
+                <li>Machine learning and deep learning for biomedical imaging, segmentation, and diagnostics</li>
+            </ul>
+        </section>
+
 
         <!-- Recent Featured Projects -->
         <section class="section">
@@ -285,20 +299,6 @@
                 </div>
 
             </div>
-        </section>
-
-        <!-- Research Agenda -->
-        <section class="section">
-            <h2>Research Agenda</h2>
-            <p>
-                My current and future research focuses on:
-            </p>
-            <ul>
-                <li>Optimization-aware tools for understanding neural network training dynamics</li>
-                <li>AI and AR systems that enhance physical therapy through motion analysis and feedback</li>
-                <li>Finite element modeling of biological tissues, particularly the human knee joint</li>
-                <li>Machine learning and deep learning for biomedical imaging, segmentation, and diagnostics</li>
-            </ul>
         </section>
 
         <!-- Graduate Coursework & Research Section -->
@@ -444,6 +444,62 @@
                         safety and well-being across residential communities.
                     </p>
                 </div>
+
+                <div class="project-card">
+                    <h3>Sports Performance Data Collection Assistant</h3>
+                    <p><strong>Pittsburg State University Women’s Soccer Team</strong> — August 2025</p>
+
+                    <p>
+                        Assisted with pre-season athletic performance testing under the supervision of
+                        <a href="https://hses.ku.edu/people/minh-nguyen">Minh Nguyen</a>, ensuring the reliability
+                        of the full data acquisition pipeline during high-intensity field sessions.
+                    </p>
+
+                    <p>
+                        Oversaw the integration and calibration of research-grade equipment—including
+                        <strong>force plates</strong>, <strong>10–30 sprint timing systems</strong>, and additional performance
+                        measurement technologies—to guarantee accurate, consistent data capture.
+                    </p>
+
+                    <p>
+                        Collaborated with applied sports scientists and coaching staff to troubleshoot
+                        real-time issues, maintain testing flow, and verify measurement consistency.
+                        This hands-on experience strengthened my interest in building ML systems that
+                        remain reliable and stable under real-world conditions.
+                    </p>
+                </div>
+
+                <div class="project-card">
+                    <h3>Judo Instructor & Assistant Coach</h3>
+                    <p><strong>Tunis, Tunisia & Lawrence, Kansas</strong> — 2016 to Spring 2024</p>
+
+                    <p>
+                        Taught judo to children and youth under the supervision of
+                        <strong>Sensai Abdelrazak Turki</strong>, former <em>Directeur Sportif</em> of the Tunisian
+                        National Judo Team and head coach of UFE Judo Club Tunis, under whom I earned
+                        my black belt.
+                    </p>
+
+                    <p>
+                        Developed strong communication and leadership skills by breaking down complex
+                        movement patterns, demonstrating technique, and guiding students through long-term
+                        skill development and physical discipline.
+                    </p>
+
+                    <p>
+                        Later continued teaching at the <strong>Lawrence Fencing Club (LFC)</strong>, leading weekly
+                        judo classes for one year and mentoring students of diverse backgrounds.
+                    </p>
+
+                    <p>
+                        This teaching experience reinforced my ability to convey technical ideas clearly,
+                        coach learners at different skill levels, and analyze human movement—all of which
+                        support my broader interest in building ML systems for biomechanics, rehabilitation,
+                        and robust human-centered AI.
+                    </p>
+                </div>
+
+
 
             </div>
         </section>
