--- a/index.html
+++ b/index.html
@@ -143,6 +143,38 @@
                 height: 220px;
             }
         }
+
+        /* Horizontal scroll container */
+        .horizontal-scroll {
+            display: flex;
+            gap: 20px;
+            overflow-x: auto;
+            scroll-snap-type: x mandatory;
+            padding-bottom: 10px;
+        }
+
+            .horizontal-scroll::-webkit-scrollbar {
+                height: 8px;
+            }
+
+            .horizontal-scroll::-webkit-scrollbar-thumb {
+                background: #ccc;
+                border-radius: 4px;
+            }
+
+            .horizontal-scroll::-webkit-scrollbar-track {
+                background: #f0f0f0;
+            }
+
+        .scroll-card {
+            min-width: 260px;
+            background: white;
+            padding: 20px;
+            border-radius: 12px;
+            border: 1px solid #eee;
+            scroll-snap-align: start;
+        }
+
     </style>
 </head>
 
@@ -419,10 +451,10 @@
         <section class="section">
             <h2>Work Experience</h2>
 
-            <div class="projects-grid">
+            <div class="horizontal-scroll">
 
                 <!-- ---- Software Engineering Intern ---- -->
-                <div class="project-card">
+                <div class="scroll-card">
                     <h3>Software Engineering Intern</h3>
                     <p><strong>MP Software LLC</strong> — Jun 2025 to Aug 2025</p>
 
@@ -435,16 +467,16 @@
                     </div>
 
                     <ul class="card-list">
-                        <li>Drafted technical roadmap for SyncroAI and identified integration opportunities.</li>
-                        <li>Built SyncroStore’s first ML-based customer segmentation feature.</li>
-                        <li>Fixed bugs and implemented new features in ASP.NET Web Forms.</li>
-                        <li>Optimized SQL stored procedures and maintained database schemas.</li>
-                        <li>Wrote weekly AI-focused technical blog posts for broad audiences.</li>
+                        <li>Drafted technical roadmap for SyncroAI.</li>
+                        <li>Built ML-based customer segmentation features.</li>
+                        <li>Developed and debugged ASP.NET Web Forms features.</li>
+                        <li>Optimized SQL schemas and stored procedures.</li>
+                        <li>Authored technical blog posts on AI trends.</li>
                     </ul>
                 </div>
 
                 <!-- ---- Desk Assistant ---- -->
-                <div class="project-card">
+                <div class="scroll-card">
                     <h3>Desk Assistant / Night Desk Assistant</h3>
                     <p><strong>Kansas Student Housing</strong> — Jan 2023 to May 2025</p>
 
@@ -456,55 +488,59 @@
                     </div>
 
                     <ul class="card-list">
-                        <li>Coordinated with desk staff and RAs to maintain building operations.</li>
-                        <li>Managed emergencies, lockouts, and violations during night shifts.</li>
-                        <li>Assisted residents during move-in and move-out periods.</li>
-                        <li>Reported incidents and relayed updates to directors.</li>
+                        <li>Coordinated with RAs to maintain building operations.</li>
+                        <li>Handled late-night emergencies and student issues.</li>
+                        <li>Assisted during move-in and move-out.</li>
+                        <li>Maintained safety communication with directors.</li>
                     </ul>
                 </div>
 
                 <!-- ---- Sports Performance Assistant ---- -->
-                <div class="project-card">
+                <div class="scroll-card">
                     <h3>Sports Performance Data Collection Assistant</h3>
                     <p><strong>Pittsburg State University Women’s Soccer Team</strong> — August 2025</p>
 
                     <div class="tags">
-                        <span class="tag">Force Plates</span>
-                        <span class="tag">Sprint Timing</span>
-                        <span class="tag">Data Reliability</span>
                         <span class="tag">Applied Biomechanics</span>
+                        <span class="tag">Team Collaboration</span>
+                        <span class="tag">Field Communication</span>
+                        <span class="tag">Human Performance</span>
                     </div>
 
                     <ul class="card-list">
-                        <li>Supported pre-season athletic performance testing sessions.</li>
-                        <li>Calibrated force plates and 10–30 sprint timing systems.</li>
-                        <li>Troubleshot data collection issues in real time.</li>
-                        <li>Ensured consistent acquisition pipelines under field conditions.</li>
+                        <li>Worked closely with coaches, athletes, and sports scientists to run efficient pre-season testing sessions.</li>
+                        <li>Explained procedures to athletes clearly to ensure safe and consistent data collection.</li>
+                        <li>Calibrated force plates and sprint timing systems while communicating status updates in real time.</li>
+                        <li>Troubleshot data issues under time pressure, coordinating fixes with the field team.</li>
+                        <li>Gained practical experience in human performance metrics and movement patterns relevant to ML for rehab.</li>
                     </ul>
                 </div>
 
+
                 <!-- ---- Judo Instructor ---- -->
-                <div class="project-card">
+                <div class="scroll-card">
                     <h3>Judo Instructor & Assistant Coach</h3>
                     <p><strong>Tunis, Tunisia & Lawrence, Kansas</strong> — 2016 to Spring 2024</p>
 
                     <div class="tags">
                         <span class="tag">Teaching</span>
+                        <span class="tag">Mentorship</span>
                         <span class="tag">Movement Analysis</span>
-                        <span class="tag">Coaching</span>
                         <span class="tag">Leadership</span>
                     </div>
 
                     <ul class="card-list">
-                        <li>Taught judo under Sensai Abdelrazak Turki—former Directeur Sportif of Tunisia's national team.</li>
-                        <li>Guided students through technical development and physical discipline.</li>
-                        <li>Coached at the Lawrence Fencing Club (LFC) for one year.</li>
-                        <li>Gained a practical understanding of biomechanics relevant to AI + human movement.</li>
+                        <li>Taught judo under Sensai Abdelrazak Turki, former Directeur Sportif of the Tunisian National Team.</li>
+                        <li>Mentored children and young athletes, adapting explanations to their learning styles and abilities.</li>
+                        <li>Broke down complex movement patterns into accessible steps, strengthening my communication skills.</li>
+                        <li>Coached weekly judo classes at the Lawrence Fencing Club (LFC), guiding students through skill progression.</li>
+                        <li>Developed hands-on intuition about biomechanics and human movement relevant to ML + rehab technology.</li>
                     </ul>
                 </div>
 
             </div>
         </section>
+
 
 
         <!-- -------------------- PERSONAL CREATIVE PROJECTS -------------------- -->
@@ -526,31 +562,13 @@
         <section class="section">
             <h2>Achievements</h2>
 
-            <div class="projects-grid">
-
-                <div class="project-card">
-                    <h3>UPE Honors Society</h3>
-                    <p>Member of the Upsilon Pi Epsilon honor society.</p>
-                </div>
-
-                <div class="project-card">
-                    <h3>Black Babcock Scholarship</h3>
-                    <p>Awarded for academic excellence in mathematics and computing.</p>
-                </div>
-
-                <div class="project-card">
-                    <h3>May Landis Mathematics Scholarship</h3>
-                    <p>Recognized for achievement and potential in advanced mathematics.</p>
-                </div>
-
-                <div class="project-card">
-                    <h3>Dean’s Honor Roll</h3>
-                    <p>Repeated recognition by both Engineering and CLAS divisions.</p>
-                </div>
-
-            </div>
+            <ul>
+                <li><strong>UPE Honors Society</strong> — Inducted for academic excellence in computing.</li>
+                <li><strong>Black Babcock Scholarship</strong> — Awarded for high performance in mathematics and computing.</li>
+                <li><strong>May Landis Mathematics Scholarship</strong> — Recognized for excellence and potential in mathematics.</li>
+                <li><strong>Dean’s Honor Roll</strong> — Multiple semesters (Engineering & CLAS).</li>
+            </ul>
         </section>
-
 
         <!-- -------------------- CONTACT -------------------- -->
         <section class="section">
