--- a/index.html
+++ b/index.html
@@ -459,21 +459,50 @@
                     <p><strong>MP Software LLC</strong> — Jun 2025 to Aug 2025</p>
 
                     <div class="tags">
+                        <span class="tag">AI Strategy</span>
                         <span class="tag">K-Means</span>
                         <span class="tag">ASP.NET</span>
                         <span class="tag">SQL</span>
-                        <span class="tag">AI Strategy</span>
                         <span class="tag">Full-Stack</span>
+                        <span class="tag">Technical Writing</span>
                     </div>
 
                     <ul class="card-list">
-                        <li>Drafted technical roadmap for SyncroAI.</li>
-                        <li>Built ML-based customer segmentation features.</li>
-                        <li>Developed and debugged ASP.NET Web Forms features.</li>
-                        <li>Optimized SQL schemas and stored procedures.</li>
-                        <li>Authored technical blog posts on AI trends.</li>
+                        <li>
+                            Collaborated directly with company leadership to draft a multi-phase roadmap
+                            for <strong>SyncroAI</strong>, identifying cross-product opportunities in pricing,
+                            inventory reconciliation, and reporting systems.
+                        </li>
+
+                        <li>
+                            Designed and implemented SyncroStore’s first <strong>AI-driven customer segmentation</strong>
+                            feature using K-Means clustering—mapping customer behavior patterns into
+                            actionable insights for retailers.
+                        </li>
+
+                        <li>
+                            Modernized legacy ASP.NET Web Forms components by adding new UI elements,
+                            redesigning workflows, and resolving long-standing customer-reported bugs.
+                        </li>
+
+                        <li>
+                            Improved database reliability by writing and optimizing <strong>stored procedures</strong>,
+                            refactoring slow SQL queries, and updating internal schemas used by production clients.
+                        </li>
+
+                        <li>
+                            Authored weekly <strong>technical blog posts</strong> explaining complex ML concepts, new
+                            product releases, and industry AI trends in accessible language for non-technical users.
+                        </li>
+
+                        <li>
+                            Communicated design constraints, tradeoffs, and implementation timelines to
+                            cross-functional teams, strengthening my ability to bridge engineering and
+                            business perspectives.
+                        </li>
                     </ul>
                 </div>
+
 
                 <!-- ---- Desk Assistant ---- -->
                 <div class="scroll-card">
@@ -482,18 +511,47 @@
 
                     <div class="tags">
                         <span class="tag">Communication</span>
-                        <span class="tag">Crisis Response</span>
-                        <span class="tag">Teamwork</span>
+                        <span class="tag">Conflict Resolution</span>
                         <span class="tag">Student Support</span>
+                        <span class="tag">Crisis Management</span>
+                        <span class="tag">Teamwork</span>
+                        <span class="tag">Responsibility</span>
                     </div>
 
                     <ul class="card-list">
-                        <li>Coordinated with RAs to maintain building operations.</li>
-                        <li>Handled late-night emergencies and student issues.</li>
-                        <li>Assisted during move-in and move-out.</li>
-                        <li>Maintained safety communication with directors.</li>
+                        <li>
+                            Served as the primary point-of-contact for hundreds of residents during both day
+                            and late-night shifts, communicating policies, answering questions, and resolving issues.
+                        </li>
+
+                        <li>
+                            Handled <strong>high-pressure situations</strong> including lockouts, policy violations,
+                            distressed students, and safety-related incidents—often making decisions independently.
+                        </li>
+
+                        <li>
+                            Coordinated with Resident Assistants (RAs) and complex directors to relay incidents,
+                            escalate urgent cases, and ensure community safety.
+                        </li>
+
+                        <li>
+                            Supported move-in and move-out operations by checking in new residents, managing
+                            documentation, and assisting families—requiring professionalism and strong interpersonal skills.
+                        </li>
+
+                        <li>
+                            Developed the ability to communicate clearly, maintain composure under pressure,
+                            and provide empathetic support to residents—skills directly transferable to
+                            team-based research, teaching, and collaborative technical environments.
+                        </li>
+
+                        <li>
+                            Cultivated a reputation for reliability, punctuality, and strong judgment across
+                            multiple residential halls and staff teams.
+                        </li>
                     </ul>
                 </div>
+
 
                 <!-- ---- Sports Performance Assistant ---- -->
                 <div class="scroll-card">
@@ -502,19 +560,43 @@
 
                     <div class="tags">
                         <span class="tag">Applied Biomechanics</span>
-                        <span class="tag">Team Collaboration</span>
+                        <span class="tag">Research Collaboration</span>
                         <span class="tag">Field Communication</span>
                         <span class="tag">Human Performance</span>
+                        <span class="tag">Data Reliability</span>
                     </div>
 
                     <ul class="card-list">
-                        <li>Worked closely with coaches, athletes, and sports scientists to run efficient pre-season testing sessions.</li>
-                        <li>Explained procedures to athletes clearly to ensure safe and consistent data collection.</li>
-                        <li>Calibrated force plates and sprint timing systems while communicating status updates in real time.</li>
-                        <li>Troubleshot data issues under time pressure, coordinating fixes with the field team.</li>
-                        <li>Gained practical experience in human performance metrics and movement patterns relevant to ML for rehab.</li>
+                        <li>
+                            Collaborated with
+                            <a href="https://hses.ku.edu/people/minh-nguyen">Minh Nguyen</a>,
+                            a KU PhD student in Exercise Physiology and research scientist in the
+                            <strong>Jayhawk Athletic Performance Laboratory (KU)</strong>,
+                            to support pre-season performance testing for a collegiate women’s soccer program.
+                        </li>
+
+                        <li>
+                            Communicated testing protocols clearly to athletes and coaching staff to ensure
+                            safe, consistent, and repeatable measurement conditions in a fast-paced on-field environment.
+                        </li>
+
+                        <li>
+                            Calibrated and operated research-grade hardware including <strong>force plates</strong> and
+                            <strong>10–30 sprint timing systems</strong>, ensuring accurate and reliable biomechanical data collection.
+                        </li>
+
+                        <li>
+                            Troubleshot real-time data issues under time pressure, coordinating fixes with the research lead
+                            while maintaining smooth session flow — strengthening my ability to collaborate in applied research settings.
+                        </li>
+
+                        <li>
+                            Gained practical experience with human movement assessment and performance metrics,
+                            reinforcing my broader interest in ML for rehabilitation, biomechanics, and human-centered modeling.
+                        </li>
                     </ul>
                 </div>
+
 
 
                 <!-- ---- Judo Instructor ---- -->
@@ -530,10 +612,10 @@
                     </div>
 
                     <ul class="card-list">
-                        <li>Taught judo under Sensai Abdelrazak Turki, former Directeur Sportif of the Tunisian National Team.</li>
+                        <li>Taught judo under Sensai Abderrazak Turki, former manager of the Tunisian Judo National Team.</li>
                         <li>Mentored children and young athletes, adapting explanations to their learning styles and abilities.</li>
                         <li>Broke down complex movement patterns into accessible steps, strengthening my communication skills.</li>
-                        <li>Coached weekly judo classes at the Lawrence Fencing Club (LFC), guiding students through skill progression.</li>
+                        <li>Coached weekly judo classes at the Lawrence Fight Club (LFC), guiding students through skill progression.</li>
                         <li>Developed hands-on intuition about biomechanics and human movement relevant to ML + rehab technology.</li>
                     </ul>
                 </div>
