minor css styling change

--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@
             }
 
         .scroll-card {
-            min-width: 260px;
+            min-width: 420px;
+            max-width: 420px;
             background: white;
             padding: 20px;
             border-radius: 12px;
