--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
 
         .project-card {
             background: white;
+            gap: 20px;
+            min-width: 420px;
+            max-width: 420px;
             padding: 20px;
             border-radius: 12px;
             border: 1px solid #eee;
