minor css styling change and added judo group pic

--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
             gap: 20px;
+            column-gap: 20px;
+            row-gap: 20px;
         }
 
         .project-card {
@@ -216,7 +218,7 @@
 
             <!-- Block 2 -->
             <div class="about-block reverse">
-                <img src="judo.jpg" class="about-img">
+                <img src="assets\1000004738.jpg" class="about-img">
                 <div class="about-text">
                     <h3>Sports & Personal Interests</h3>
                     <p>
