minor css styling change

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
             <div class="projects-grid">
 
                 <!-- ---- Undergraduate Researcher ---- -->
-                <div class="scroll-card">
+                <div class="project-card">
                     <h3>Undergraduate Researcher — CardioSegNet (Phase 1)</h3>
                     <p><strong>I2S, University of Kansas</strong> — Jan 2023 to May 2025</p>
 
@@ -442,7 +442,7 @@
 
 
                 <!-- ---- MATH 796 ---- -->
-                <div class="scroll-card">
+                <div class="project-card">
                     <h3>MATH 796 — Optimization & Machine Learning</h3>
                     <p><strong>Graduate Course Project Work</strong></p>
 
