layout changes and new pics

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <section class="section">
             <h2>About Me</h2>
 
-            <!-- Block 1 -->
+            <!-- Block 1: Text - Image -->
             <div class="about-block">
                 <div class="about-text">
                     <h3>Where I'm From</h3>
@@ -213,24 +213,24 @@
                         and the <strong>Pioneer School of Ariana (LPA)</strong>, where I completed the mathematics section.
                     </p>
                 </div>
-                <img src="mediterranean.jpg" class="about-img">
+                <img src="assets\1000004739.jpg" class="about-img" alt="Mediterranean landscape">
             </div>
 
-            <!-- Block 2 -->
+            <!-- Block 2: Image - Text -->
             <div class="about-block reverse">
-                <img src="assets\1000004738.jpg" class="about-img">
                 <div class="about-text">
                     <h3>Sports & Personal Interests</h3>
                     <p>
                         Athletics have always played a central role in my life, especially <strong>judo</strong>.
                         Training taught me discipline, resilience, and the importance of technical precision—
                         qualities that translate directly into my work in machine learning and computational
-                        modeling. I’m also deeply interested in <strong>ancient history</strong>, particularly Carthage.
+                        modeling. I'm also deeply interested in <strong>ancient history</strong>, particularly Carthage.
                     </p>
                 </div>
+                <img src="assets\1000004738.jpg" class="about-img" alt="Judo training">
             </div>
 
-            <!-- Block 3 -->
+            <!-- Block 3: Text - Image (or centered text) -->
             <div class="about-block">
                 <div class="about-text">
                     <h3>Research Interests & Aspirations</h3>
@@ -241,9 +241,8 @@
                         domains where reliability matters.
                     </p>
                 </div>
-                <img src="research.jpg" class="about-img">
+                <img src="research.jpg" class="about-img" alt="Research visualization">
             </div>
-
         </section>
 
 
@@ -690,8 +689,9 @@
                         </li>
 
                         <li>
-                            Calibrated and operated research-grade hardware including <strong>force plates</strong> and
-                            <strong>10–30 sprint timing systems</strong>, ensuring accurate and reliable biomechanical data collection.
+                            Calibrated and operated research-grade hardware including force plates and the
+                            <strong>1080 Sprint machine</strong>, enabling the collection of high-resolution force, velocity,
+                            and acceleration data for biomechanical analysis.
                         </li>
 
                         <li>
